<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ProfilActivity" >
    <!--    tools:context="${relativePackage}.${activityClass}"-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="238dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45dp"
                android:src="@drawable/user" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_account"/>

        <EditText
            android:id="@+id/namaProfil"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textStyle="bold"
            android:text="@string/hint_name"
            android:textColor="@color/lbl_name"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_call_black_24dp"/>

        <EditText
            android:id="@+id/nohpProfil"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textStyle="bold"
            android:text="@string/hint_nohp"
            android:textColor="@color/lbl_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUpdateProfil"
            android:layout_width="100pt"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="SAVE"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="100pt"
            android:layout_height="wrap_content"
            android:background="@color/btn_logut_bg"
            android:text="@string/btn_logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>


    <!--    <LinearLayout-->
    <!--        android:layout_width="fill_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_centerInParent="true"-->
    <!--        android:layout_marginLeft="20dp"-->
    <!--        android:layout_marginRight="20dp"-->
    <!--        android:gravity="center"-->
    <!--        android:orientation="vertical" >-->
    <!--        -->
    <!--        <TextView-->
    <!--            android:id="@+id/name"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:padding="10dp"-->
    <!--            android:textColor="@color/lbl_name"-->
    <!--            android:textSize="24dp" />-->


    <!--        -->
    <!--    </LinearLayout>-->

</LinearLayout>